bindata/v3.11.0/openshift-apiserver/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: ""
    workload.openshift.io/allowed: "management"
  name: openshift-apiserver
  labels:
    openshift.io/run-level-: "" # remove the label if previously set
    openshift.io/cluster-monitoring: "true"
