bindata/v3.11.0/openshift-apiserver/svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: openshift-apiserver
  name: api
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: serving-cert
  labels:
    prometheus: openshift-apiserver
spec:
  selector:
    apiserver: "true"
  ports:
  - name: https
    port: 443
    targetPort: 8443
